add dns record query

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 ☐ create pure socket connection
     ✔ create a fork for each cnnection @done(22-06-12 23:01)
     ✔ using socket.h for linux @done(22-06-12 23:03)
-    ☐ DNS query
+    ✔ DNS query @done(22-06-14 00:13)
     ☐ using winsock for windows
     ☐ TLS socket
     ☐ websocket
