--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@
     ☐ websocket
     ☐ ipv6 support
     ✔ Async @done(22-06-14 22:39)
-    ☐ loop thread may not kill. must review
+    ✔ loop thread may not kill. must review @done(22-06-18 20:53)
     
 ☐ create file system
 
