add windows stack trace - first step

--- a/TODO
+++ b/TODO
@@ -19,7 +19,9 @@
 ☐ create Stacktrace 
     ✔ for linux @done(22-06-12 23:02)
     ☐ for windows
+        ☐ find out how can i get true process address
     ☐ try to create crossplatform stacktrace using general compiler like gcc
+    ☐ read about jit debuggers
 
 ☐ create core dumper
 
